--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"e1839a8" = {editable = true, path = "."}
+rttypes = {editable = true, path = "."}
 
 [dev-packages]
 
